tests/paczka2/big_fuzzy/44175046.err
Error in line 4: ngXv5AB2 A666 11,8
Error in line 13: S986 A203 69,1
Error in line 28: sco7NPRQD A203 55,4
Error in line 27: S986 S986 3,4
Error in line 34: S986 A203 20,6
Error in line 36: sco7NPRQD S813 63,7
Error in line 31: 80XVj S813 32,8
Error in line 41: 80XVj A666 11,2
Error in line 52: BkKVS A666 32,61
Error in line 51: tlyx7 A666 58,1
Error in line 60: S986 S813 26,9
Error in line 74: ngXv5AB2 S813 77,2
Error in line 67: BkKVS A666 130,3
Error in line 78: BkKVS S813 4,3
Error in line 80: BkKVS S986 29,5
Error in line 85: S986 S813 71,0
Error in line 88: S986 A203 77,4
Error in line 90: S986 A666 78,6
Error in line 101: S986 A203 91,5
Error in line 121: sco7NPRQD S98H 48,2
Error in line 126: BkKVS A666 -2,3
Error in line 120: tlyx7 S986 189,6
Error in line 113: uDFwNLNk0wg A203 29,1
Error in line 133: tlyx7 S813 47,6
Error in line 125: BkKVS A666 85,9
Error in line 136: 80XVj A666 35,5
Error in line 132: sco7NPRQD S986 73,9
Error in line 161: 80XVj S986 21,7
Error in line 163: S986 A666 94,5
Error in line 201: uDFwNLNk0wg S986 97,6
Error in line 209: sco7NPRQD A203 33,3
Error in line 222: 80XVj A666 45,1
Error in line 223: sco7NPRQD S986 17,1
Error in line 186: tlyx7 A203 58,9
Error in line 239: BkKVS S986 79,7
Error in line 245: ngXv5AB2 S986 74,8
